# mirage

./: .env.test.example  .prettierignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  PLANS.md  README.md  components.json  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: COMPATIBILITY.md  CONSTRAINT_INDEX.md  DESIGN.md  FRONTEND.md  GARDENING_POLICY.md  HARNESS.md  OPERATIONS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  SECURITY.md  TEST_STRATEGY.md
docs/design-docs/: README.md
docs/exec-plans/: README.md  tech-debt-tracker.md
docs/product-specs/: README.md  v1.md
docs/references/: README.md  code-patterns.md  first-feature-walkthrough.md
src/: main.css  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command.rs  domain.rs  infra.rs  lib.rs  main.rs
src-tauri/src/command/: config.rs  error.rs  llm.rs  session.rs  state.rs  theme_card.rs
src-tauri/src/domain/: error.rs  llm.rs  session.rs  theme_card.rs
src-tauri/src/gateway/: llm.rs
src-tauri/src/infra/: app_config_repo.rs  database.rs  migration.rs  session_repo.rs  surreal_session_repo.rs  surreal_theme_card_repo.rs  theme_card_repo.rs  vault.rs
src/components/: AppLayout.vue
src/composables/: useChat.ts  useLlmStream.ts
src/schemas/: config.test.ts  config.ts  llm.ts  session.test.ts  session.ts  themeCard.test.ts  themeCard.ts
src/services/: config.test.ts  config.ts  llm.ts  session.ts  themeCard.test.ts  themeCard.ts
src/types/: bindings.ts
src/views/: ChatView.vue  SettingsView.vue  (+1 more)
(+8 files in other folders)
